--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h2>404 PAGE NOT FOUND</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>the requested resource could not be found ( ✜︵✜ )</strong></p>
+  <img src="/assets/images/404.gif">
 </div>
