restricting content, cleaning up

--- a/404.html
+++ b/404.html
@@ -1,6 +1,9 @@
 ---
 permalink: /404.html
 layout: default
+redirect_from:
+ - /assets/
+ - /manpages/
 ---
 
 <style type="text/css" media="screen">
