--- a/blog.html
+++ b/blog.html
@@ -2,14 +2,13 @@
 layout: default
 title: blog
 ---
-<h1>latest posts</h1>
+<h1>> blog</h1>
 
 <ul>
   {% for post in site.posts %}
     <li>
 	    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-	    <sub>{{ post.date }}</sub>
-
+	    <sub>{{ post.date | date: '%B %d, %Y'}}</sub>
 	    {{ post.excerpt }}
     </li>
   {% endfor %}
