--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,33 @@ title: blog
 <h1>> blog</h1>
 
 <ul>
+  {% assign all_tags = "" %}
+  {% for post in site.posts %}
+    {% for tag in post.tags %}
+      {% assign all_tags = all_tags | append: tag | append: "," %}
+    {% endfor %}
+  {% endfor %}
+  
+  {% assign unique_tags = all_tags | split: "," | uniq %}
+  <sub>tags</sub>
+  {% for tag in unique_tags %}
+    {% if tag != "" %}
+      <sub><a href="/tag/{{ tag }}">#{{ tag }}</a></sub>
+    {% endif %}
+  {% endfor %}
+</ul>
+
+<ul>
+  {% for tag in post.tags %}
+  <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
+  {% endfor %}
+</ul>
+
+<ul>
   {% for post in site.posts %}
     <li>
-	    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-	    <sub>{{ post.date | date: '%B %d, %Y'}}</sub>
-	    {{ post.excerpt }}
+	    <a href="{{ post.url }}">{{ post.title }}</a>
+	    {{ post.date | date: '%d %B %Y'}}
     </li>
   {% endfor %}
 </ul>
